# candlefish-ai

./: .dependency-check-suppressions.xml  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.js  PR_DESCRIPTION.md  QUICK_TEST_COMMANDS.md  README.md  TEST_PLAN.md  WORKFLOW_AUTOMATION.md  docker-compose.yml  pyproject.toml
.github/workflows/: aws-deployment.yml  ci-cd.yml  docs.yml  monitoring-alerts.yml  release.yml  security.yml  test-automation.yml
clos/: __init__.py
clos/orchestrator/: __init__.py  app.py  config.py
docker/clos/: Dockerfile
scripts/: configure-github-secrets.sh  deploy-full-auto.sh  setup-dev-environment.sh  test-workflows.sh
terraform/environments/production/: main.tf  variables.tf
terraform/environments/production/.terraform/modules/: modules.json
